--- a/style.css
+++ b/style.css
@@ -43,3 +43,25 @@ form{
     border-radius: 5px;
     margin-left: 10px;
 }
+.search-results{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.search-result{
+    margin-bottom: 60px;
+    width:30%;
+    height: 100%;
+    border-radius: 5px;
+    box-shadow:0 0 6px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+}
+.search-result img {
+    width:100%;
+    height:100% ;
+    object-fit: cover;
+}
